--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -27,7 +27,7 @@
     }
 
     position: relative;
-
+    z-index: 1;
 }
 
 .footer {
